# eba-xbrl-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/xbrlval/: __init__.py  api.py  cli.py  config.py  loader.py  model.py  report.py  validate.py  webui.py
src/xbrlval/rules/: __init__.py  base.py  custom_rules.py
tests/: test_cli.py  test_model.py  test_report.py  test_smoke.py  test_validate.py
tests/fixtures/: broken_instance.xbrl  demo.xsd  valid_instance.xbrl
